--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -1,8 +1,12 @@
 @import ~office-ui-fabric-react/dist/sass/Fabric
 @import ~bootstrap/scss/bootstrap
+@import ~@morteza-jamali/micon-font/dist/micon/css/micon.css
 
 html , body , #root
   height: 100%
   width: 100%
 body
   background-color: $ms-color-gray160 !important
+button, a, div
+  &:focus
+    outline: none !important
