--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -1,5 +1,4 @@
 @import ~office-ui-fabric-react/dist/sass/Fabric
-@import ~bootstrap/scss/bootstrap
 @import ~@morteza-jamali/micon-font/dist/micon/css/micon.css
 
 html , body , #root
@@ -7,6 +6,7 @@ html , body , #root
   width: 100%
 body
   background-color: $ms-color-gray40 !important
+  margin: 0
 button, a, div
   &:focus
     outline: none !important
