--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -5,7 +5,7 @@ html , body , #root
   height: 100%
   width: 100%
 body
-  background-color: $ms-color-gray40 !important
+  background-color: #333333 !important
   margin: 0
 button, a, div
   &:focus
