vscode theme created for editor

--- a/app/app.global.sass
+++ b/app/app.global.sass
@@ -1,6 +1,15 @@
 @import ~office-ui-fabric-react/dist/sass/Fabric
 @import ~@morteza-jamali/micon-font/dist/micon/css/micon.css
 
+::-webkit-scrollbar
+  width: 12px
+  height: 12px
+  background-color: transparent
+  border-left: 1px solid #404040
+::-webkit-scrollbar-thumb
+  background-color: rgba(255, 255, 255, 0.3)
+  &:hover
+    background-color: rgba(255, 255, 255, 0.6)
 html , body , #root
   height: 100%
   width: 100%
